* re-fixed apache.m4 to better detect APR and APU code
* fixed for win32 compilation under apache 2
* lowered minumum required apache 2 version to 2.0.40 (RH9)
* Added LogSQLDisablePreserve to disable the preserve file.
* Changed default preserve file location to logs/mod_log_sql-preserve
  And made LogSQLPreserveFile root relative.
* fixed bug where preserve file wouldn't be created in apache 2

1.97: 2004-04-08
* fixed apache.m4 to work with apache 2 setups with different include
  directories for APR and APU then core Apache
* cleaned up configuration documentation (updated due to deprecated commands)
* LogSQLLoginInfo updated to support a connection URI
* new module "registration" macros to clean up new driver modules
* mysql driver completely separted from core module

1.96: 2004-03-04
* fixed LogSQLPreserveFile config parameter
* reworked safe_create_tables and core SQL insert routine.
* renamed log_sql_* variables and typedefs to logsql_*
* separated all mysql specific code to separate code module (DB abstraction)
* separated TODO from Changelog
* fixed default value of socket file. it's really /var/lib/mysql/mysql.sock not
  /tmp/mysql.sock
* Documentation completely converted to Docbook
* Documentation updated. (still needs more work done)
* LogSQLDelayedInserts config option removed
* Added DB generic LogSQLDBParam. Usage is LogSQLDBParam param value
  example: LogSQLDBParam tcpport 12345
* notes, cookes, headersin, headersout tables are no longer created unless they
  are used.

1.95: 2004-02-05
* audit and update of extract_* functions to acheive same output as 
  mod_log_config.

1.94: 2004-02-03
* ssl loggin back in as separate module under 1.3 and 2.0
* preparsing of format tags is now done to speed up main logging loop.
* fixed a nasty bug with pointer arithmetic (ick) that caused a segfault with
  LogSQLWhichCookies

1.93: 2004-01-20
* Compiles for apache 1.3 AND 2.0
* split apache version specific functions to seperate header files