@@ -1,5 +1,5 @@
 This document has been superseded by the new documentation in the
-Documentation/ directory.  There you will find the docs in a variety of
+docs/ directory.  There you will find the docs in a variety of
 formats, including PostScript, plaintext, and HTML.
 
 Basic overview is..
